# cnab_python

./: README.md  pyproject.toml
.github/workflows/: actions.yml
cnab/bancos/: __init__.py
cnab/core/: fields.py
cnab/core/abstract/: abstract_remessa.py
cnab/core/common/: dominio.py
cnab/core/types/: field_types.py
cnab/exceptions_custom/: fields_exceptions.py
cnab/remessa/: arquivo_base.py  base.py  fields.py  lote_base.py
cnab/remessa/tributos/: fields.py  lote_base.py
tests/: test_bancos.py  test_fields.py  test_remessa.py
