[tool.poetry]
name = "cnab"
version = "0.1.0"
description = ""
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"


[tool.poetry.group.linter.dependencies]
isort = "^5.13.2"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
